--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
             <img src="./img/namecard.png">
 <p>植木屋のWEBデザインの画像</p>
             <img src="./img/ueki.png">
-<br>
+ <p> コーディングした植木屋のサイト</p>
 
-    <a href="https://i2124079.github.io/i2124079_last/" >コーディングした植木屋のサイト</a>
+           <a href="https://i2124079.github.io/i2124079_last/" >西山植木株式会社</a>
